[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Laser Bolt.png" type="Texture" id=1]
[ext_resource path="res://Scripts/MiningLaserBolt.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
height = 40.0

[node name="MiningLaserBolt" type="Area2D" groups=["MiningLaserBolt"]]
collision_layer = 16
collision_mask = 6
script = ExtResource( 2 )

[node name="LaserBoltSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 14, 0 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="LifeTime" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="area_entered" from="." to="." method="_on_MiningLaserBolt_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_MiningLaserBolt_body_entered"]
[connection signal="timeout" from="LifeTime" to="." method="_on_LifeTime_timeout"]
